# RemoteIDTransmitter

./: .gitmodules  CMakeLists.txt  Makefile  README.md  config.toml  install.sh  set_capabilities.sh
libraries/: CMakeLists.txt
src/: bluetooth.c  bluetooth.h  main.cpp
src/Bluetooth/: Bluetooth.cpp  Bluetooth.hpp  BluetoothLegacy.cpp  print_bt_features.c  print_bt_features.h
src/Transmitter/: Transmitter.cpp  Transmitter.hpp
src/Transmitter/parameters/: parameters.cpp  parameters.hpp
src/Transmitter/states/: State1.cpp  State2.cpp  State3.cpp
src/Transmitter/states/base/: State.hpp
src/misc/: CircularBuffer.hpp  global_include.hpp  uas_serial.hpp
